--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "files": [
     "dist"
   ],
+  "scripts": {
+    "build": "tsc"
+  },
   "peerDependencies": {
     "react": "*",
     "react-native": "*",
