--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   "packageManager": "yarn@4.2.2",
   "main": "dist/index.js",
   "files": [
-    "dist"
+    "dist",
+    "assets"
   ],
   "scripts": {
     "build": "tsc"
